@@ -256,27 +256,23 @@ sp_guide_position_from_pt (SPGuide const *guide, NR::Point const &pt)
 	return dot(guide->normal, pt);
 }
 
-/** Temporary moveto in response to motion event while dragging (desktop-events.cpp). */
-void sp_guide_moveto(SPGuide const *guide, gdouble position)
+/**
+ * \arg commit False indicates temporary moveto in response to motion event while dragging,
+ *		true indicates a "committing" version: in response to button release event after
+ *		dragging a guideline, or clicking OK in guide editing dialog.
+ */
+void sp_guide_moveto(SPGuide const &guide, gdouble const position, bool const commit)
 {
-	g_assert (guide != NULL);
-	g_assert (SP_IS_GUIDE (guide));
+	g_assert(SP_IS_GUIDE(&guide));
 
-	for (GSList *l = guide->views; l != NULL; l = l->next) {
+	for (GSList *l = guide.views; l != NULL; l = l->next) {
 		sp_guideline_set_position(SP_GUIDELINE(l->data),
 					  position);
 	}
-}
-
-/** Permanent (committing) version of sp_guide_moveto, in response to button release event after
-    dragging a guideline, or clicking OK in guide editing dialog (both in desktop-events.cpp). */
-void sp_guide_position_set(SPGuide *guide, double position)
-{
-	g_assert (SP_IS_GUIDE (guide));
-
-	sp_guide_moveto(guide, position);
-	sp_repr_set_double(SP_OBJECT(guide)->repr,
-				     "position", position);
+	if (commit) {
+		sp_repr_set_double(SP_OBJECT(&guide)->repr,
+				   "position", position);
+	}
 }
 
 /**
